# new-mail-client

./: .env  .env.example  .gitignore  LICENSE.md  README.md  go.mod  go.sum  ux-pass-keyboard.js  ux-pass-runtime.js  ux-pass.spec.js
data/: app.db  app.db-shm  app.db-wal
deploy/: apache2.conf  despatch-mailsec.service  despatch-pam-reset-helper.service  despatch-pam-reset-helper.socket  despatch-updater.path  despatch-updater.service  despatch.service  mailclient-mailsec.service  mailclient-pam-reset-helper.service  mailclient-pam-reset-helper.socket  mailclient-updater.path  mailclient-updater.service  mailclient.service  nginx.conf  run_despatch.sh  run_mailclient.sh
docs/: versioning.md
migrations/: 001_init.sql  002_users_mail_login.sql  003_cleanup_rejected_users.sql  004_cleanup_rejected_users_casefold.sql  005_admin_query_indexes.sql  006_users_recovery_email.sql  007_mail_accounts.sql  008_mail_index.sql  009_preferences_and_search.sql  010_drafts_schedule.sql  011_rules_sieve.sql  012_mfa_totp_webauthn.sql  013_crypto_keys.sql  014_session_management.sql  015_sync_state.sql  016_quota_and_health.sql  017_mfa_onboarding_flags.sql  018_mfa_usability_trusted_devices.sql  019_users_mail_secret.sql  020_mail_index_scoped_ids.sql  025_session_mail_profiles.sql  026_draft_context_account.sql
rust/: Cargo.toml  deny.toml
rust/mailsec_service/: Cargo.toml
rust/mailsec_service/src/: main.rs
rust/pam_reset_helper/: Cargo.toml
rust/pam_reset_helper/src/: main.rs
rust/update_worker/: Cargo.toml
rust/update_worker/src/: main.rs
scripts/: auto_install.sh  check_no_native_dialogs.sh  check_no_runtime_artifacts.sh  check_surface_depth.sh  check_ui_contract.sh  check_ui_selector_contract.sh  check_warm_palette.sh  despatch.py  diagnose_access.sh  mailclient_tui.py  tui.sh  tui_plain.sh  (+1 more)
(+166 files in other folders)
