[package]
name = "mailsec_service"
version = "0.1.0"
edition = "2021"

[dependencies]
contracts = { path = "../contracts", version = "0.1.0" }
ammonia = "4"
base64 = "0.22"
ciborium = "0.2"
data-encoding = "2"
hmac = "0.12"
mailparse = "0.15"
openssl = { version = "0.10", features = ["vendored"] }
p256 = { version = "0.13", features = ["ecdsa"] }
pgp = "0.19"
rand = "0.8"
rand_chacha = "0.3"
regex = "1"
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = { version = "0.10", features = ["oid"] }
subtle = "2"
thiserror = "1"

[dev-dependencies]
rand_core = "0.6"
