[package]
name = "pam_reset_helper"
version = "0.1.0"
edition = "2021"

[dependencies]
contracts = { path = "../contracts", version = "0.1.0" }
nix = { version = "0.29", features = ["socket", "user", "fs"] }
serde_json = "1"
thiserror = "1"
wait-timeout = "0.2"
zeroize = { version = "1", features = ["zeroize_derive"] }
