[package]
name = "update_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
contracts = { path = "../contracts", version = "0.1.0" }
flate2 = "1"
nix = { version = "0.29", features = ["user", "fs"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "1"
url = "2"
walkdir = "2"
wait-timeout = "0.2"
percent-encoding = "2"
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
